@@ -167,9 +167,9 @@ is b($bytes)->decode('UTF-8'), "[\"hello\\u0003\x{0152}world\x{0152}!\"]",
   'encode ["hello\x{0003}\x{0152}world\x{0152}!"]';
 $bytes = encode_json ["123abc"];
 is $bytes, '["123abc"]', 'encode ["123abc"]';
-$bytes = encode_json ["\x00\x1f \a\b/\f\r"];
-is $bytes, '["\\u0000\\u001f \\u0007\\b/\f\r"]',
-  'encode ["\x00\x1f \a\b/\f\r"]';
+$bytes = encode_json ["\x00\x1f \a\b\f\r"];
+is $bytes, '["\\u0000\\u001f \\u0007\\b\f\r"]',
+  'encode ["\x00\x1f \a\b\f\r"]';
 $bytes = encode_json '';
 is $bytes, '""', 'encode ""';
 $bytes = encode_json "hell\no";
@@ -264,12 +264,12 @@ is_deeply $hash, {foo => 'c:\progra~1\mozill~1\firefox.exe'},
 $bytes = encode_json(['a' x 32768]);
 is_deeply decode_json($bytes), ['a' x 32768], 'successful roundtrip';
 
-# u2028, u2029 and slash
-#$bytes = encode_json ["\x{2028}test\x{2029}123</script>"];
-#is $bytes, '["\u2028test\u2029123<\/script>"]',
-#  'escaped u2028, u2029 and slash';
-#is_deeply decode_json($bytes), ["\x{2028}test\x{2029}123</script>"],
-#  'successful roundtrip';
+# Escaped slash
+if (Mojo::JSON::MaybeXS::JSON eq 'JSON::PP' or _cpanel_version('3.0206')) {
+  $bytes = encode_json ["test123</script>"];
+  is $bytes, '["test123<\/script>"]', 'escaped slash';
+  is_deeply decode_json($bytes), ["test123</script>"], 'successful roundtrip';
+}
 
 # JSON without UTF-8 encoding
 is_deeply from_json('["♥"]'), ['♥'], 'characters decoded';
